--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -1,9 +1,25 @@
-name: My First Robot
-on: [push]
+name: Build and Push to Docker Hub
+
+on:
+  push:
+    branches: [ "main" ]
 
 jobs:
-  say-hello:
+  build-and-push:
     runs-on: ubuntu-latest
     steps:
-      - name: Print a message
-        run: echo "Hello Boss! GitHub Actions is working!"
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/my-docker-app:latest
